--- a/css/main.css
+++ b/css/main.css
@@ -4,20 +4,24 @@ div{
     display: inline-block
 }
 .principal{
-
+    min-width: 1000px;
+    min-height: 1000px;
+    width: 1000px;
+    height: 2000px;
+    margin-top: 5%;
 }
 .foto{
     font-family: 'Poppins', sans-serif;
     font-size: 100%;
     display: inline-block;
-    margin-top: 1%;
+    margin-top: 5%;
     margin-left: 5%;
-
+    padding: 2px;
 }
 
 .pessoal{
 font-family: 'Poppins', sans-serif;
-margin-left: 20%;
+margin-left: 14%;
 margin-top: 1%;
 font-size: 100%;
 }
@@ -33,13 +37,14 @@ font-size: 100%;
     position:relative;
     background-color: rgb(227, 214, 191, 0.85);
     font-family: 'Poppins', sans-serif;
-    font-size: 90%;
+    font-size: 91%;
 
 }
 .objetivos{
     font-family: 'Poppins', sans-serif;
     padding: 18px;
     margin-left: 11%;
+    margin-top: 10px;
     width: 25%;
     height: 20%;
     min-width: 100px;
@@ -47,8 +52,7 @@ font-size: 100%;
     border: 1px solid #333;
     position:relative;
     background-color: rgb(227, 214, 191, 0.85);
-    border-radius: 12px;
-    font-size: 94%;
+    font-size: 89%;
     
 }
 .habilidades{
@@ -56,8 +60,8 @@ font-size: 100%;
     padding: 18px;
     margin-top: 1%;
     margin-left: 5%;
-    width: 45%;
-    height: 20%;
+    width: 65%;
+    height: 10%;
     min-width: 100px;
     min-height: 100px;
     border: 1px solid #333;
